--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/KShervington/anime-news-assistant.git\u001b[H\u001b[F/issues"
   },
-  "homepage": "https://github.com/KShervington/anime-news-assistant.git\u001b[H\u001b[F#readme"
+  "homepage": "https://github.com/KShervington/anime-news-assistant.git\u001b[H\u001b[F#readme",
+  "dependencies": {
+    "axios": "^1.6.5",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "openai": "^4.24.1",
+    "readline": "^1.3.0"
+  }
 }
