--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "An AI assistant that provides up=to-date news about the anime industry.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "recentNews": "ts-node functions/recentNews.ts"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,12 @@
     "fs": "^0.0.1-security",
     "openai": "^4.24.1",
     "readline": "^1.3.0"
+  },
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^20.10.7",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   }
 }
