--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "An AI assistant that provides up=to-date news about the anime industry.",
   "main": "index.js",
   "scripts": {
-    "start": "react start",
+    "start": "npx tsx index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "recentNews": "ts-node functions/recentNews.ts"
+    "recentNews": "npx tsx functions/recentNews.ts"
   },
   "repository": {
     "type": "git",
@@ -30,8 +30,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.10.7",
-    "ts-node": "^10.9.2",
-    "tslib": "^2.6.2",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
